# splay_permutation

./: CMakeLists.txt  check.cpp  gen.py  main.cpp  output.cpp  sol.cpp  test.txt  test_gen.py
splay-tree/: Tree.h  basic_operations.cpp  construct.cpp  find.cpp  operations.cpp  splay.cpp  std_in_out.cpp  utilitites.cpp
